--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
+      <a-torus-knot color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
+      <a-dodecahedron color="#FF926B" radius="5"></a-dodecahedron>
     </a-scene>
   </body>
 </html>
