--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-box position="-9.31212 2.5 7.42651" rotation="0 45 0" color="#4CC3D9" geometry="depth: 5; height: 5; width: 5"></a-box>
+      <a-sphere radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="8.16194 2.5 7.86944" radius="0.5" height="1.5" color="#FFC65D" geometry="height: 5; radius: 2.5"></a-cylinder>
+      <a-plane rotation="-90 0 0" width="4" height="4" color="#7BC8A4" geometry="height: 30; width: 30"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-torus-knot color="#B84A39" arc="180" p="2" q="7" radius="5" radius-tubular="0.1"></a-torus-knot>
-      <a-dodecahedron color="#FF926B" radius="5"></a-dodecahedron>
+     <a-dodecahedron color="#FF926B" radius="5" geometry="radius: 2.5" position="0 2.5 -10"></a-dodecahedron>
     </a-scene>
   </body>
 </html>
